Changelog
=========

1.1a2 - unreleased
------------------

- Added cs-cz combined language code. It solves problem with default language
  on new Plone site creation (Safari/Mac).
  [naro]

- Added missing 'native' descriptions to pt-* combined languages.
  [igbun]

1.1a1 - 2009-04-04
------------------

- Removed the negotiator sub-package, as it hasn't been enabled or used yet.
  The functionality is better placed as a WSGI-middleware.
  [hannosch]

- Register all dependencies in setup.py. Move test dependencies into a
  separate extra to keep the dependencies low so things like the normalizer
  can be used in non-zope contexts.
  [wichert]

1.0.9 - Unreleased
------------------

- Added Romanian language as the language for the .ro TLD. This closes
  http://dev.plone.org/plone/ticket/9152
  [vincentfretin]

1.0.8 - 2009-10-15
------------------

- Added new UNDERSCORE_START_REGEX to the file normalizer. This removes any
  leading underscores from uploaded file names. Objects in Zope cannot start
  with an underscore, so it makes little sense to generate suggested file
  names which cannot work.
  [hannosch]

- Added bulgarian normalizer.
  [vlado]

1.0.7 - 2008-11-05
------------------

- Allow _ as a valid character in file names and URLs. Do not remove # from
  file names. It only has a special meaning for URLs.
  [hannosch, sidnei]

1.0.6 - August 18, 2008
-----------------------

- Added normalization for a French-only character (igature of o and e)
  which isn't part of ISO 8859-1. This closes
  http://dev.plone.org/plone/ticket/7512.
  [dbaty, hannosch]

- Fixed the greek character normalization based on a patch by ggozad.
  This closes http://dev.plone.org/plone/ticket/8308.
  [hannosch]

- Changed the default normalization of characters used in Scandinavian
  languages to meet the most common rules. This is based on a discussion
  with translators from all Scandinavian countries.
  [hannosch]

- Added a subdomain language negotiator (e.g. de.plone.org).